--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <div class="flex flex-row -z-50 mt-14 lg:mx-32">
-        <img src="images/profikle_photo.jpg" alt="" class="bg-primary aspect-square h-80 hidden sm:block object-cover object-center ">
+        <img src="images/profile.png" alt="" class="bg-primary aspect-square h-80 hidden sm:block object-cover object-center ">
         <div class="bg-primary secondry p-10 w-fit">
             <h1 class="text-2xl xl:text-4xl font-bold text-white">Hi,I'm Mahmoud Benyoucef</h1>
             <p class="xl:mt-10 text-lg xl:text-2xl h-30">
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="" alt="" class="rounded-2xl bg-primary  h-72 object-cover object-center images">
+                <img src="" alt="" class="rounded-2xl bg-primary border-2 border-amber-400 h-72 sm:w-96 object-contain object-center images">
             </div>
         </template>
         <template id="tag_template">
@@ -58,9 +58,9 @@
     <div class="flex flex-col justify-center w-full mt-20">
         <h4 id="Contact" class="text-4xl font-extrabold primary text-center">Contact Me</h4>
         <div class="flex flex-row gap-2 justify-center mt-16">
-            <a class="font-semibold text-lg hover:text-orange-600" target="_blank" href="mailto:inkwolf42@gmail.com">inkwolf42@gmail.com</a> || 
-            <a class="font-semibold text-lg hover:text-orange-600" target="_blank" href="https://www.linkedin.com/in/benyoucef-mahmoud-97a514392/">LinkedIn</a> || 
-            <a class="font-semibold text-lg hover:text-orange-600" target="_blank" href="https://github.com/inkwolf42">GitHub</a> 
+            <a class="font-semibold text-lg hover:text-orange-600 border-b-2 hover:border-amber-400" target="_blank" href="mailto:inkwolf42@gmail.com">inkwolf42@gmail.com</a> || 
+            <a class="font-semibold text-lg hover:text-orange-600 border-b-2 hover:border-amber-400" target="_blank" href="https://www.linkedin.com/in/benyoucef-mahmoud-97a514392/">LinkedIn</a> || 
+            <a class="font-semibold text-lg hover:text-orange-600 border-b-2 hover:border-amber-400" target="_blank" href="https://github.com/inkwolf42">GitHub</a> 
         </div>
     </div>
 
